--- a/README
+++ b/README
@@ -1,9 +1,12 @@
 quantum_informaion package for Maxima copyright 2008 , John Lapeyre
 
+This software is usable, but incomplete. For instance the manual
+probably ends mid-sentence.
+
 qinf.mac      -- the main file to be loaded.
 frompra.mac   -- some application. Some of this will be moved to qinf.mac
 
-rtest_qinf.mac -- run with batch("rtest_qinf.mac, test);
+rtest_qinf.mac -- run with batch("rtest_qinf.mac", test);
 
 -------
 following are original test scripts. These are to be converted to
