--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 0.05
+2008-08-18  John Lapeyre  <lapeyre@physics.arizona.edu>
+
+	* edits to manual, pdf and html
+	* reorganized pauli expansion functions
+	* added example of pauli expansion functions.
+	
 Version 0.04
 2008-08-18  John Lapeyre  <lapeyre@physics.arizona.edu>
 
