--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 0.12
+2008-09-03  John Lapeyre  <lapeyre@physics.arizona.edu>
+
+	* added some Mma compatibility functions.
+	* added some functions and ideas from code of R Griffiths
+	* added more helper functions
+
 Version 0.11
 2008-09-01  John Lapeyre  <lapeyre@physics.arizona.edu>
 
