--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 0.1.0
+Wed May  9 22:23:47 CEST 2018 John Lapeyre
+	* Update many things
+	* Migrate to github
+	* Renumber git tags for previous versions, to agree with
+	  symantic versioning. E.g. the last version was 0.0.12
+
 Version 0.12
 2008-09-03  John Lapeyre  <lapeyre@physics.arizona.edu>
 
